# utcnow

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tox.ini  utcnow-cli.toml
.github/: dependabot.yml
.github/workflows/: pythonpackage.yml
tests/: conftest.py  test_cli_interface.py  test_dates.py  test_datetime_compare.py  test_formatters.py  test_init.py  test_lrucache.py  test_modifier.py  test_module_calls.py  test_now.py  test_protobuf.py  test_readme_examples.py  test_rfc3799.py  test_synchronizer.py  test_timediff.py  test_unixtime.py
utcnow/: __init__.py  __init__.pyi  __main__.py  __version__.py  __version_data__.py  interface.py
utcnow/cli/: __init__.py  __main__.py  __version_data__.py
utcnow/protobuf/: __init__.py
